[package]
name = "snake"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", rev="33448508a524db6447b380cc236be6f0d5ca8a86", features = ["canvas", "tokio"] }
rand = "0.7"
